<resources>
    <string name="app_name">От и до</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="passenger_in">Войти как пассажир</string>
    <string name="driver_in">Войти как водитель</string>
    <string name="avatar">Аватар</string>
    <string name="next">Далее</string>
    <string name="first_welcome">Добро пожаловать в сервис совместных поездок</string>
    <string name="login_phone_number">Номер телефона:</string>
    <string name="login_password">Пароль:</string>
    <string name="enter">Войти</string>
    <string name="login_lost_password">Я забыл пароль</string>
    <string name="login_have_not_account">Нет аккаунта?</string>
    <string name="login_make_register">Зарегистрируетесь</string>
    <string name="entry_password">Введите пароль</string>
    <string name="entry_phone">Введите номер телефона</string>
    <string name="entry_login">Введите логин</string>
    <string name="name">Имя</string>
    <string name="entry_name">Введите имя</string>


    <string name="txtSurname">Введите фамилию</string>
    <string name="Surname">Фамилия</string>
    <string name="txtPhone">Телефон</string>
    <string name="txtPassword">Пароль</string>
    <string name="txtPasswordTwo">Подтвердите пароль</string>
    <string name="txtReg">Зарегистрироваться</string>

    <string name="mainInfo">Основные</string>
    <string name="securityInfo">Безопасность</string>
    <string name="securityValidate">Пройти безопасность</string>
    <string name="butSave">Сохранить</string>

    <string name="switchChange">Изменения</string>
    <string name="driverInfo">Для водителей</string>
    <string name="passport">Паспорт</string>
    <string name="license">Лицензия</string>
    <string name="email">Почта</string>

    <string name="txtDelete">Удалить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Фамилия</string>
    <string name="register">Регистрация</string>
    <string name="exit">Выйти</string>
    <string name="find">Поиск</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="where">Когда</string>
    <string name="background">background</string>


    <!-- MapKit errors -->
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>

</resources>