<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:rotation="-26"
        android:scrollbarSize="5dp"
        app:cardBackgroundColor="#314267"
        app:cardCornerRadius="120dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:background="@drawable/transperent"
            android:rotation="26"
            app:cardBackgroundColor="#314267"
            app:cardCornerRadius="9999dp">

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/baseline_account_circle_24" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDriver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <Button
        android:id="@+id/buttonDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:onClick="onEnterClick"
        android:text="@string/driver_in"
        app:layout_constraintBottom_toTopOf="@+id/buttonPassenger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <Button
        android:id="@+id/buttonPassenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:onClick="onEnterClick"
        android:text="@string/passenger_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDriver" />

    <TextView
        android:id="@+id/textViewExitAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>