<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="148dp"
        android:layout_height="147dp"
        android:layout_marginBottom="30dp"

        android:background="@drawable/bg_image_profile"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
        app:layout_constraintEnd_toEndOf="@+id/imageBackground"
        app:layout_constraintStart_toStartOf="@+id/imageBackground"
        app:layout_constraintTop_toTopOf="@+id/imageBackground" />


    <ScrollView

        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_scrollview_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBackground">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/switchChange"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtMainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/values"
                android:gravity="center"
                android:text="@string/mainInfo"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameFieldLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/surnameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Surname"
                    android:inputType="text"
                    android:maxLength="30"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameFieldLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLength="20"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailFieldLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="Пол" />

                <TextView
                    android:id="@+id/txtCalendar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="dd/MM/yyyy"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/values"
                android:gravity="center"
                android:text="@string/securityInfo"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/securityValidate"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneFieldLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:prefixText="+7">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/phoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPhone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordFieldLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPassword"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordFieldLayoutStill"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/passwordFieldStill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPasswordTwo"
                    android:inputType="textPassword"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/values"
                android:gravity="center"
                android:text="@string/driverInfo"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passportFieldLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/passportField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passport"
                    android:inputType="text"
                    android:maxLength="11"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/licenseFieldLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/licenseField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/license"
                    android:inputType="text"
                    android:maxLength="30"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/butSave" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>